Revision history for ExtUtils-HasCompiler

{{$NEXT}}

0.011     2015-07-08 22:54:00+02:00 Europe/Amsterdam
          Always define IMPORTS argument to Mksymlists

0.010     2015-07-07 16:28:40+02:00 Europe/Amsterdam
          Add /c to MSVC compiles

0.009     2015-07-05 17:45:27+02:00 Europe/Amsterdam
          Don't forget the dot on the loadable object
          Handle DynaLoaders without unload
          Added VMS support

0.008     2015-07-03 14:13:30+02:00 Europe/Amsterdam
          Handle ancient perls without PERL_UNUSED_VAR
          Improve diagnostics

0.007     2015-07-02 07:41:29+02:00 Europe/Amsterdam
          Use carp and return instead of croak
          Explicitly handle import lib for cygwin
          Use separate compiling and linking stages

0.006     2015-06-27 15:40:31+02:00 Europe/Amsterdam
          Correctly pass linking argument on Win32 and cygwin

0.005     2015-06-27 14:30:04+02:00 Europe/Amsterdam
          Return false early on static perls
          Get rid of can_compile_executable
          Link to libperl on Win32

0.004     2015-06-26 03:13:56+02:00 Europe/Amsterdam
          Fix MSVC regression
          Only use env-vars when no config is passed
          Rely on config to be overriden instead of adding yet another way to override
          Give clearer errors on compilation failure

0.003     2015-05-30 19:33:33+02:00 Europe/Amsterdam
          Prefer environmental variables over configuration (experimental)
          Get rid of Perl::OSType dependency

0.002     2015-04-19 19:18:10+02:00 Europe/Amsterdam
          Switch to ExtUtils::MakeMaker

0.001     2015-04-19 16:54:07+02:00 Europe/Amsterdam
          Initial release to an unsuspecting world