@@ -9,7 +9,6 @@ our %EXPORT_TAGS = (all => \@EXPORT_OK);
 
 use Config;
 use Carp 'carp';
-use ExtUtils::Mksymlists;
 use File::Basename 'basename';
 use File::Spec::Functions qw/catfile catdir/;
 use File::Temp qw/tempdir tempfile/;
@@ -87,7 +86,10 @@ sub can_compile_loadable_object {
 
 	my ($cc, $ccflags, $optimize, $cccdlflags, $ld, $lddlflags, $libperl, $perllibs) = map { $config->get($_) } qw/cc ccflags optimize cccdlflags ld lddlflags libperl perllibs/;
 
-	Mksymlists(NAME => $basename, FILE => $abs_basename, IMPORTS => {}) if $prelinking{$^O};
+	if ($prelinking{$^O}) {
+		require ExtUtils::Mksymlists;
+		ExtUtils::Mksymlists::Mksymlists(NAME => $basename, FILE => $abs_basename, IMPORTS => {});
+	}
 	my @commands;
 	if ($^O eq 'MSWin32' && $cc =~ /^cl/) {
 		push @commands, qq{$cc $ccflags $cccdlflags $optimize /I "$incdir" /c $source_name /Fo$object_file};
